# human-yard

./: humanizr.cabal
app/: Main.hs
src/Data/: Humanized.hs  Humanizr.hs
src/Data/Humanizr/: Transformer.hs
src/Data/Text/: Utils.hs
test/Data/: HumanizrSpec.hs
