name:                humanizr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/humanizr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Humanizr
                     , Data.Humanized
  other-modules:       Data.Humanizr.Transformer
                     , Data.Text.Utils
  build-depends:       base           >= 4.7      && < 5
                     , pcre-heavy     >= 1.0.0    && < 1.5
                     , text           >= 1.2.2.1  && < 1.5
  default-language:    Haskell2010

executable humanizr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , humanizr
  default-language:    Haskell2010

test-suite humanizr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.HumanizrSpec
  build-depends:       base
                     , humanizr
                     , hspec          >= 2.0 && < 3.0
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/humanizr
